--- a/spserver2016-gray-chorme.user.css
+++ b/spserver2016-gray-chorme.user.css
@@ -1,8 +1,9 @@
 /* ==UserStyle==
 @name        Sharepoint2016 Gray Chorme
-@namespace   Hmm
-@version     1.0.1
+@namespace   Hmm1
+@version     1.1.1
 @homepageURL https://github.com/stepanhakobyan/custom-user-scripts
+@updateURL   https://github.com/stepanhakobyan/custom-user-scripts/raw/master/spserver2016-gray-chorme.user.css
 @author      sts
 ==/UserStyle== */
 @-moz-document url-prefix("https://spserver2016.armsoft.am/") {
