--- a/spserver2016-gray-chorme.user.css
+++ b/spserver2016-gray-chorme.user.css
@@ -60,5 +60,8 @@
         background-color: white;
     }
     
-    
+    /* կողքի հղումների գույնը   -  "Home", "Անձնական Էջ"... */
+    .menu-item-text {
+        color: #333333;
+    }
 }
